# backend/routes/api.php
@@ -21,15 +21,15 @@ Route::prefix('v1')->group(function () {
         Route::put('/auth/password', [AuthController::class, 'updatePassword']);
         Route::get('/notes', [NoteController::class, 'index']);
         Route::post('/notes', [NoteController::class, 'store']);
-        Route::get('/notes/{id}', [NoteController::class, 'show']);
-        Route::put('/notes/{id}', [NoteController::class, 'update']);
-        Route::delete('/notes/{id}', [NoteController::class, 'destroy']);
+        Route::get('/notes/{sqid}', [NoteController::class, 'show']);
+        Route::put('/notes/{sqid}', [NoteController::class, 'update']);
+        Route::delete('/notes/{sqid}', [NoteController::class, 'destroy']);
         Route::get('/permissions', [PermissionController::class, 'index']);
         Route::get('/roles', [RoleController::class, 'index']);
         Route::get('/teams', [TeamController::class, 'index']);
         Route::post('/teams', [TeamController::class, 'store']);
-        Route::get('/teams/{id}', [TeamController::class, 'show']);
-        Route::put('/teams/{id}', [TeamController::class, 'update']);
-        Route::delete('/teams/{id}', [TeamController::class, 'destroy']);
+        Route::get('/teams/{sqid}', [TeamController::class, 'show']);
+        Route::put('/teams/{sqid}', [TeamController::class, 'update']);
+        Route::delete('/teams/{sqid}', [TeamController::class, 'destroy']);
     });
 });
